src/objects/Sensor_Event__c.object
<CustomObject>
    <fields>
        <fullName>Modulus_Vector_Length__c</fullName>
        <formula>SQRT(
  (x__c * x__c) + 
  (y__c * y__c) + 
  (z__c * z__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modulus_Vector_Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Previous_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Event</label>
        <referenceTo>Sensor_Event__c</referenceTo>
        <relationshipLabel>Sensor Event</relationshipLabel>
        <relationshipName>Sensor_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sensor__c</fullName>
        <label>Sensor</label>
        <referenceTo>Sensor__c</referenceTo>
        <relationshipLabel>Sensor Event</relationshipLabel>
        <relationshipName>Sensor_Event</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>x__c</fullName>
        <label>x</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>y__c</fullName>
        <label>y</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>z__c</fullName>
        <label>z</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Sensor Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Test_Sensors_Event</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>x__c</columns>
        <columns>y__c</columns>
        <columns>z__c</columns>
        <columns>Sensor__c</columns>
        <columns>Previous_Event__c</columns>
        <columns>Modulus_Vector_Length__c</columns>
        <filterScope>Everything</filterScope>
        <label>Test Sensors Event</label>
    </listViews>
    <nameField>
        <label>Sensor Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sensor Event</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>